--- a/neuroevolution_of_augmenting_topologies_paper.tex
+++ b/neuroevolution_of_augmenting_topologies_paper.tex
@@ -79,9 +79,9 @@
 
 \section{Introduction}
 
-\IEEEPARstart{W}{ith} the rise of Deep Learning in this decade, see especially [AlexNet, +2 OTHER EXAMPLES], did the machine learning research community increasingly face the challenge of having to configure even more hyperparameters, create even more layers and run even more tests. In order to ease this design process did the concept of \textit{Automated Machine Learning} (short form: AutoML) come into focus. One aspect of AutoML - the evolution of artificial neural networks (short form: ANNs) - is addressed in this paper and its most prominent representative - NEAT - is thoroughly discussed. 
+\IEEEPARstart{W}{ith} the rise of Deep Learning in this decade, see especially \cite{kri12, cir12, sch14}, did the machine learning research community increasingly face the challenge of having to configure even more hyperparameters, create even more layers and run even more tests. In order to ease this design process did the concept of \textit{Automated Machine Learning} (short form: AutoML) come into focus. One aspect of AutoML - the evolution of artificial neural networks (short form: ANNs) - is addressed in this paper and its most prominent representative - NEAT - is thoroughly discussed. 
 
-This evolution of artificial neural networks is called \textit{neuroevolution} and it is a form of evolutionary algorithm that generates specific ANNs through modification of its parameters, topology and rules in order to maximize the ANN's accuracy or fitness score. The neuroevolution algorithm seeks to modify the ANN in an evolutionary process similar to the Darwinian process that produced human brains and its process-summarizing maxim 'survival of the fittest'. First methods using neuroevolution can be traced back to the 1980s and 1990s \href{https://www.inovex.de/blog/neuroevolution/}{[cite]}, while the first evolutionary algorithms were conceived in the 1950s by Alan Turing and Nils Barricelli. \href{https://en.wikipedia.org/wiki/Genetic_algorithm#cite_note-mind.oxfordjournals.org-33}{[cite]}
+This evolution of artificial neural networks is called \textit{neuroevolution} and it is a form of evolutionary algorithm that generates specific ANNs through modification of its parameters, topology and rules in order to maximize the ANN's accuracy or fitness score. The neuroevolution algorithm seeks to modify the ANN in an evolutionary process similar to the Darwinian process that produced human brains and its process-summarizing maxim 'survival of the fittest'. First methods using neuroevolution can be traced back to the 1980s and 1990s \cite{fro18}, while the first evolutionary algorithms were conceived in the 1950s by Alan Turing and Nils Barricelli \cite{tur50}.
 
 
 
@@ -95,7 +95,7 @@ To better characterize neuroevolution in this chapter is it best to first roughl
 
 \subsection{Evolutionary and Genetic Algorithms}
 
-An evolutionary algorithm (short form: EA) is defined as 'a generic population-based and meta-heuristically optimized algorithmic solution to an applied problem' \href{https://en.wikipedia.org/wiki/Evolutionary_algorithm}{[cite]}. When breaking this complex definition down into simpler terms, is the first thing that should be clarified about EAs the fact that they are no algorithmic solution to the applied problem in and of themselves per se, but rather that they are meta-algorithms that create another optimized algorithm, which then solves the applied problem. An evolutionary algorithm therefore encodes a method of how to come up with the best solution to an algorithmic problem.
+An evolutionary algorithm (short form: EA) is defined as 'a generic population-based and meta-heuristically optimized algorithmic solution to an applied problem' \cite{hol12}. When breaking this complex definition down into simpler terms, is the first thing that should be clarified about EAs the fact that they are no algorithmic solution to the applied problem in and of themselves per se, but rather that they are meta-algorithms that create another optimized algorithm, which then solves the applied problem. An evolutionary algorithm therefore encodes a method of how to come up with the best solution to an algorithmic problem.
 
 Evolutionary algorithms set out to finding this best algorithmic solution through a \textit{population-based} method. This means that EAs manage an arbitrary variety of algorithmic solutions - all of which differ and solve the applied problem with various grades of accuracy or fitness scoring. Each of these algorithmic solutions is called a \textit{member} of the evolutionary algorithms' population. To determine the best member of the population does the evolutionary algorithm assign each a \textit{fitness score} after it is created. In the context of neuroevolution for example is this fitness score calculated by judging the accuracy of the artificial neural network.
 
@@ -135,13 +135,13 @@ All those Details of the neuroevolution process, e.g. how the encoding scheme sp
 
 \section{NeuroEvolution of Augmenting Topologies (NEAT)} \label{sec:neat}
 
-Kenneth O.Stanley and Risto Miikkulainen co-published in the year 2002 an approach to neuroevolution they called \textit{Neuroevolution of Augmenting Topologies} - or in short \textit{'NEAT'} - in their paper "Evolving Neural Networks through Augmenting Topologies" [cite]. At the time of envisionment was NEAT considered one of the most promising approaches to ANN evolution and it is still considered a viable approach and a benchmark algorithm in many neuroevolution frameworks to this day. The first section in this chapter will outline what aspects of NEAT set it apart from the preceding research and enabled its leap in performance, which will be looked upon in the second section. This chapter closes with a short overview of great frameworks that support and projects that are realized with NEAT.
+Kenneth O.Stanley and Risto Miikkulainen co-published in the year 2002 an approach to neuroevolution they called \textit{Neuroevolution of Augmenting Topologies} - or in short \textit{'NEAT'} - in their paper "Evolving Neural Networks through Augmenting Topologies" \cite{sta02_1}. At the time of envisionment was NEAT considered one of the most promising approaches to ANN evolution and it is still considered a viable approach and a benchmark algorithm in many neuroevolution frameworks to this day. The first section in this chapter will outline what aspects of NEAT set it apart from the preceding research and enabled its leap in performance, which will be looked upon in the second section. This chapter closes with a short overview of great frameworks that support and projects that are realized with NEAT.
 
 
 
 \subsection{Key Aspects of NEAT and Differences to Preceding Neuroevolution}
 
-In his dissertation titled 'Efficient Evolution of Neural Networks through Complexification' and published in 2004, did Stanley present three main technical challenges to the current state of neuroevolution and evolving structure incrementally [cite]. He asked the following three questions that summarize these challenges [cite]:
+In his dissertation titled 'Efficient Evolution of Neural Networks through Complexification' \cite{sta04} and published in 2004, did Stanley present three main technical challenges to the current state of neuroevolution and evolving structure incrementally. He asked the following three questions that summarize these challenges \cite[page 4]{sta04}:
 
 \begin{itemize}
     \item "Is there a genetic representation that allows disparate topologies to cross over in a meaningful way?"
@@ -155,7 +155,7 @@ Stanley answered these questions with the following key aspects of NEAT, which d
 
 \subsubsection{Historical Markings}
 
-Historical markings were introduced to overcome the challenge of 'Competing Conventions' - visualized in illustration \ref{ill:comp_conv}. This example illustrates the attempt to cross over [A,B,C] and [C,B,A], which can result in [C,B,C], a representation that has lost one third of the information that both of the parents had. The probability of severe genetic damage like this when looking at nontrivial crossovers (where an offspring is not simply a duplicate of a parent) with no protection against this sort of information erasement lies at 66.6\% - as thoroughly calculated by Stanley in [cite phd, page 19].
+Historical markings were introduced to overcome the challenge of 'Competing Conventions' - visualized in illustration \ref{ill:comp_conv}. This example illustrates the attempt to cross over [A,B,C] and [C,B,A], which can result in [C,B,C], a representation that has lost one third of the information that both of the parents had. The probability of severe genetic damage like this when looking at nontrivial crossovers (where an offspring is not simply a duplicate of a parent) with no protection against this sort of information erasement lies at 66.6\% - as thoroughly calculated by Stanley in \cite[page 19]{sta04}.
 
 \begin{figure}
     \includegraphics[width=0.45\textwidth]{{Competing_Conventions_Crossover_-_sta02_2}}
@@ -178,11 +178,11 @@ This elaboration of the principle of historical markings explains how the crosso
 
 
 \subsubsection{Speciation}
-Speciation, also known as \textit{niching}, has been studied in GAs but has rarely been applied to NE prior to its introduction in NEAT [cite phd, p25]. Though it is a crucial part of NEAT and as Stanley verified empirically in his PhD thesis does the lack of speciation significantly limit NEAT's ability to add and maintain new topologies [cite PhD, chapter 4.3]. 
+Speciation, also known as \textit{niching}, has been studied in GAs but has rarely been applied to NE prior to its introduction in NEAT \cite[page 25]{sta04}. Though it is a crucial part of NEAT and as Stanley verified empirically in his PhD thesis does the lack of speciation significantly limit NEAT's ability to add and maintain new topologies \cite[chap 4.3]{sta04}. 
 
 The underlying problem and reason for the necessity of speciation is that topological innovation - e.g. a drastically interrupting node or connection - often underperforms compared to the other more matured members of the population, though this topological innovation may set up the new member for another mutation that in turn makes it outperform all other members. Speciation therefore protects innovation following the philosophy that new ideas must be given time to reach their potential before they are eliminated. In the context of neuroevolution does this mean that innovative members must be given time to optimize their weights or further mutate favorably before they are eliminated.
 
-The principle of speciation protects innovation by using explicit fitness sharing, a method under which individuals that are sharing a niche are forced to also share the fitness score of all members in the niche. This effectively means that each members fitness is postadjusted according to the following equation [cite phd, chap 3.3]: 
+The principle of speciation protects innovation by using explicit fitness sharing, a method under which individuals that are sharing a niche are forced to also share the fitness score of all members in the niche. This effectively means that each members fitness is postadjusted according to the following equation \cite[chap 3.3]{sta04}: 
 
 If $f_i$ is i's fitness before sharing, then after sharing it becomes $f'_i$ according to
 
@@ -203,9 +203,9 @@ This necessity of a randomly mutated initial population to produce innovation ho
 
 \subsection{Performance of NEAT} \label{sec:neat_performance}
 
-Stanley \& Miikkulainen also included thorough performance analysis in their papers introducing NEAT in 2002 and 2004 [cite all three]. Their analysis showed NEAT significantly outperforming [cite test sections from each paper] most preceding NE methods in terms of speed and required evaluations in key benchmarks like the double pole balancing task [cite paper establishing this benchmark] and the XOR topology building task [cite paper establishing this benchmark].
+Stanley \& Miikkulainen also included thorough performance analysis in their papers introducing NEAT in 2002 and 2004 \cite{sta02_1, sta02_2, sta04}. Their analysis showed NEAT significantly outperforming most preceding NE methods in terms of speed and required evaluations in key benchmarks like the double pole balancing task \cite{and89} and the XOR topology building task.
 
-The simpler of the two benchmarks - the XOR topology building task - is a sanity check for TWEANN algorithms. Because XOR is not linearly separable does a neural network require hidden units to solve it and therefore makes this benchmark suitable for testing NEATs' ability to evolve structure. It is clear that NEAT solves the XOR problem without trouble and in doing so keeps the topology small [cite phd chap 4.1]. 
+The simpler of the two benchmarks - the XOR topology building task - is a sanity check for TWEANN algorithms. Because XOR is not linearly separable does a neural network require hidden units to solve it and therefore makes this benchmark suitable for testing NEATs' ability to evolve structure. It is clear that NEAT solves the XOR problem without trouble and in doing so keeps the topology small \cite[chap 4.1]{sta04}. 
 
 \begin{figure}
     \includegraphics[width=0.45\textwidth]{{Table_Comparison_DPNV_Benchmark_-_sta02_2}}
@@ -213,7 +213,7 @@ The simpler of the two benchmarks - the XOR topology building task - is a sanity
     \label{ill:table_dpnv_benchmark}
 \end{figure}
 
-However, the double pole balancing task is of more importance, as - unlike the XOR topology building task - this benchmark is well suited for performance comparison. This benchmark has been used in RL and NE research for over 30 years [cite ablation paper 3.A] and consists of two poles connected to a moving cart by a hinge, whereas the neural network must apply force to the cart to keep the poles balanced for as long as possible. Figure \ref{ill:table_dpnv_benchmark} lists the table showing the results of the 'double pole balancing without velocity information' experiment, in which NEAT is by far the fastest system on this challenging task, clearly even outperforming ESP (Enforced SubPopulations by Gomez and Miikkulainen 1999 [cite]). This is relevant as ESP, unlike all other NE systems at the time, performs at least in the other 'double pole balancing with velocity information' experiment at the same level as NEAT [see 30p paper 4.3.2]. This underlines NEATs' ability to perform especially well in feedback-sparse environments.
+However, the double pole balancing task is of more importance, as - unlike the XOR topology building task - this benchmark is well suited for performance comparison. This benchmark has been used in RL and NE research for over 30 years \cite[chap 3.A]{sta02_2} and consists of two poles connected to a moving cart by a hinge, whereas the neural network must apply force to the cart to keep the poles balanced for as long as possible. Figure \ref{ill:table_dpnv_benchmark} lists the table showing the results of the 'double pole balancing without velocity information' experiment, in which NEAT is by far the fastest system on this challenging task, clearly even outperforming ESP (Enforced SubPopulations by Gomez \& Miikkulainen \cite{gom99}). This is relevant as ESP, unlike all other NE systems at the time, performs at least in the other 'double pole balancing with velocity information' experiment at the same level as NEAT \cite[chap 4.3.2]{sta02_1}. This underlines NEATs' ability to perform especially well in feedback-sparse environments.
 
 
 
@@ -221,12 +221,12 @@ However, the double pole balancing task is of more importance, as - unlike the X
 
 \subsection{Practical Applications of NEAT}
 
-Practical applications of the NEAT system are plentiful as it is still relevant due to its high performance. One very prominent example of a great application of NEAT is the most accurate measurement to date of the mass of the top quark, which was computed by a very large team at the Tevatron collider in 2009 \href{https://www.ncbi.nlm.nih.gov/pubmed/19518620}{[cite]}. Though NEAT was not only applied in physics, but also enabled pioneering work in advancing video game playing AI or medical AI. 
-The work of a single researcher - Matthew Hausknecht - on Atari video game playing utilizing HyperNEAT \href{https://www.cs.utexas.edu/~mhauskn/projects/atari/movies.html}{[cite]} (a very promising Advancement of NEAT introduced in 2009) was so pioneering that it was later referenced by the DeepMind Team \href{https://arxiv.org/pdf/1312.5602v1.pdf}{[cite]}, who eventually created the famous AlphaStar AI. NEAT was also applied in a recent study published in 2018, which compared the achieved accuracy of different neuroevolution approaches in the context of detecting tumors in medical images \href{http://www.bcc.ufrpe.br/sites/www.bcc.ufrpe.br/files/Luiz%20Fran%C3%A7a.pdf}{[cite]}. NEAT's performance was similar to the established algorithms, even when executing a much smaller number of generation.
+Practical applications of the NEAT system are plentiful as it is still relevant due to its high performance. One very prominent example of a great application of NEAT is the most accurate measurement to date of the mass of the top quark, which was computed by a very large team at the Tevatron collider in 2009 \cite{aal09}. Though NEAT was not only applied in physics, but also enabled pioneering work in advancing video game playing AI or medical AI. 
+The work \cite{hau12} of a single researcher - Matthew Hausknecht - on Atari video game playing utilizing HyperNEAT (a very promising Advancement of NEAT introduced in 2009) was so pioneering that it was later referenced by the DeepMind Team \cite{Mni13}, who eventually created the famous AlphaStar AI. NEAT was also applied in a recent study published in 2018, which compared the achieved accuracy of different neuroevolution approaches in the context of detecting tumors in medical images \cite{fra18}. NEAT's performance was similar to the established algorithms, even when executing a much smaller number of generation.
     
-Each of these applications implemented their own version of NEAT, as - unlike for classical machine learning - there exists no well established framework for neuroevolution. The official NEAT software catalogue \href{http://eplex.cs.ucf.edu/neat_software/}{[cite]} lists 25 different implementations and libraries for vanilla NEAT alone, the most prominent one probably being NEAT-Python \href{https://github.com/codereclaimers/neat-python}{[cite]} by CodeReclaimers. Training an agent to play SuperMario World by utilizing this NEAT-Python library can be realized in under 100 lines of code with good results [cite my supermario git].
+Each of these applications implemented their own version of NEAT, as - unlike for classical machine learning - there exists no well established framework for neuroevolution. The official NEAT software catalogue \cite{neat_software19} lists 25 different implementations and libraries for vanilla NEAT alone, the most prominent one probably being NEAT-Python \cite{cod19} by CodeReclaimers. Training an agent to play SuperMario World by utilizing this NEAT-Python library can be realized in under 100 lines of code with good results \cite{pau19_smw}.
 
-There are also currently efforts being made \href{https://github.com/PaulPauls/Tensorflow-Neuroevolution}{[cite]} to implement NEAT in the upcoming Tensorflow 2.0 [cite TF 2.0 release] release as an addon \href{https://github.com/tensorflow/addons}{[cite]} library utilizing Tensorflows newly introduced dynamic computational graphs.
+There are also currently efforts being made \cite{pau19_tefne} to implement NEAT in the upcoming Tensorflow 2.0 \cite{tf_beta19} release as an addon \cite{tf_addons19} library utilizing Tensorflows newly introduced dynamic computational graphs.
 
 
 
@@ -234,7 +234,7 @@ There are also currently efforts being made \href{https://github.com/PaulPauls/T
 
 \section{Conclusion}
 
-As this paper outlines - and the past decade proves - is neuroevolution a promising approach to developing topologies and weights of artifical neural networks. NEAT was a significant advancement for the field of Neuroevolution at the time it was introduced in the year 2002 and is still to this day an important benchmark. Even so did the research community of Neuroevolution not stop innovating and created groundbreaking new neuroevolution algorithms - some being advancements of the original NEAT. Stanley, Risi, D'Ambrosio and Lehman introduced HyperNEAT [cite] and its refinement ES-HyperNEAT [cite] in 2009/2011, further enhancing it with new fitness function objectives like 'Novelty Search' [cite] in 2011. Furthermore did Miikkulainen \& Liang bring the innovations of Deep Learning to Neuroevolution introducing CoDeepNEAT in 2017, while Real \& Aggarwal were even able to design a neuroevolution system that surpasses hand-designs for the first time in 2018.
+As this paper outlines - and the past decade proves - is neuroevolution a promising approach to developing topologies and weights of artifical neural networks. NEAT was a significant advancement for the field of Neuroevolution at the time it was introduced in the year 2002 and is still to this day an important benchmark. Even so did the research community of Neuroevolution not stop innovating and created groundbreaking new neuroevolution algorithms - some being advancements of the original NEAT. Stanley, Risi, D'Ambrosio and Lehman introduced HyperNEAT \cite{sta09} and its refinement ES-HyperNEAT \cite{ris11} in 2009/2011, further enhancing it with new fitness function objectives like 'Novelty Search' \cite{leh11} in 2011. Furthermore did Miikkulainen \& Liang bring the innovations of Deep Learning to Neuroevolution introducing CoDeepNEAT \cite{mii17} in 2017, while Real \& Aggarwal were even able to design a neuroevolution system that surpasses hand-designs for the first time in 2018 \cite{rea19}.
 
 Creating established neuroevolution frameworks that will efficiently use computational resources like the GPU will likely further this field of research even more, as the traditional machine learning frameworks already demonstrated.
 
@@ -252,17 +252,29 @@ I wish to thank Rezsa Farahani, from the Google Brain team, and Michael Adam, fr
 
 \begin{thebibliography}{5}
 
+  \bibitem{tur50}
+    Turing - Computing Machinery and Intelligence; Oct. 1950;
+    \url{https://academic.oup.com/mind/article/LIX/236/433/986238}
+
+  \bibitem{and89}
+    Anderson - Learning to control an inverted pendulum using neural networks; 1989;
+    \url{https://ieeexplore.ieee.org/document/24809}
+
   \bibitem{yao99}
     Yao - Evolving Artificial Neural Networks; 1999;
     \url{http://avellano.fis.usal.es/~lalonso/compt_soft/articulos/yao99evolving.pdf}
 
-  \bibitem{sta02_1}
-    Stanley, Miikkulainen - Efficient Evolution of Neural Network Topologies; 2002;
-    \url{http://nn.cs.utexas.edu/downloads/papers/stanley.cec02.pdf}
+  \bibitem{gom99}
+    Gomez, Miikkulainen - Solving Non-Markovian Control Tasks with Neuroevolution; 1999;
+    \url{http://nn.cs.utexas.edu/downloads/papers/gomez.ijcai99.pdf}
 
-  \bibitem{sta02_2}
+  \bibitem{sta02_1}
     Stanley, Miikkulainen - Evolving Neural Networks through Augmented Topologies; 2002;
     \url{http://nn.cs.utexas.edu/downloads/papers/stanley.ec02.pdf}
+
+  \bibitem{sta02_2}
+    Stanley, Miikkulainen - Efficient Evolution of Neural Network Topologies; 2002;
+    \url{http://nn.cs.utexas.edu/downloads/papers/stanley.cec02.pdf}
 
   \bibitem{gea03}
     Geard, Wiles - Structure and Dynamics of a Gene Network Model Incorporating Small RNAs; Dec 2003;
@@ -292,6 +304,10 @@ I wish to thank Rezsa Farahani, from the Google Brain team, and Michael Adam, fr
     Stanley, D’Ambrosio, et al - A Hypercube-Based Indirect Encoding for Evolving Large-Scale Neural Networks; 2009;
     \url{http://axon.cs.byu.edu/~dan/778/papers/NeuroEvolution/stanley3**.pdf}
 
+  \bibitem{aal09}
+    Aaltonen, Adelman, et al - Measurement of the top-quark mass with dilepton events selected using neuroevolution at CDF; Apr 2009;
+    \url{https://www.ncbi.nlm.nih.gov/pubmed/19518620}
+
   \bibitem{ris11}
     Risi, Stanley - Enhancing ES-HyperNEAT to Evolve More Complex Regular Neural Networks; Jul 2011;
     \url{http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.365.4332}
@@ -299,6 +315,18 @@ I wish to thank Rezsa Farahani, from the Google Brain team, and Michael Adam, fr
   \bibitem{leh11}
     Lehman, Stanley - Novelty Search and the Problem with Objectives; Oct 2011;
     \url{https://www.cs.ucf.edu/eplex/papers/lehman_gptp11.pdf}
+
+  \bibitem{hau12}
+    Hausknecht - A Neuroevolution Approach to General Atari Game Playing; 2012;
+    \url{https://www.cs.utexas.edu/~mhauskn/projects/atari/movies.html}
+
+  \bibitem{cir12}
+    Ciresan, Giusti, et al - Deep Neural Networks Segment Neuronal Membranes in Electron Microscopy Images; 2012;
+    \url{http://papers.nips.cc/paper/4741-deep-neural-networks-segment-neuronal-membranes-in-electron-microscopy-images.pdf}
+
+  \bibitem{kri12}
+    Krizhevsky, Sutskever, et al - ImageNet Classification with Deep Convolutional Neural Networks; 2012;
+    \url{https://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convolutional-neural-networks.pdf}
 
   \bibitem{woe12}
     Woergoetter, Porr - Scholarpedia Article on 'Reinforcement Learning'; Sep 2012;
@@ -316,9 +344,17 @@ I wish to thank Rezsa Farahani, from the Google Brain team, and Michael Adam, fr
     Lehman, Miikkulainen - Scholarpedia Article on 'Neuroevolution'; Oct 2013;
     \url{http://www.scholarpedia.org/article/Neuroevolution}
 
+  \bibitem{Mni13}
+    Mnih, Kavukcuoglu, et al - Playing Atari with Deep Reinforcement Learning; Dec 2013;
+    \url{https://arxiv.org/abs/1312.5602}
+
   \bibitem{pas14}
     Pascanu, Ganguli, et al - On the Saddle Point for Non-Convex Optimization; May 2014;
     \url{https://www.researchgate.net/publication/262452520}
+
+  \bibitem{sch14}
+    Schmidhuber - Deep Learning in Neural Networks; Apr 2014;
+    \url{https://arxiv.org/abs/1404.7828}
 
   \bibitem{kim15}
     Kim, Rigazio - Deep Clustered Convolutional Kernels; Mar 2015;
@@ -372,6 +408,10 @@ I wish to thank Rezsa Farahani, from the Google Brain team, and Michael Adam, fr
     Liu, Simonyan, et al - Hierarchical Representation for Efficient Architecture Search; Feb 2018;
     \url{https://arxiv.org/abs/1711.00436}
 
+  \bibitem{fra18}
+    Franca - Neuroevolution of Augmenting Topologies Applied to the Detection of Cancer in Medical Images; Feb 2018;
+    \url{http://www.bcc.ufrpe.br/sites/www.bcc.ufrpe.br/files/Luiz%20Fran%C3%A7a.pdf}
+
   \bibitem{suc18_accelerating_deep_neuroevolution}
     Such, Stanley, et al - Accelerating Deep Neuroevolution: Train Atari in Hours on a Single Personal Computer; Apr 2018;
     \url{https://eng.uber.com/accelerated-neuroevolution/}
@@ -416,7 +456,29 @@ I wish to thank Rezsa Farahani, from the Google Brain team, and Michael Adam, fr
     Sun, Xue, et al - Evolving Deep Convolutional Neural Networks for Image Classification; Mar 2019;
     \url{https://arxiv.org/abs/1710.10741}
 
+  \bibitem{cod19}
+    CodeReclaimers - NEAT Python; Jun 2019;
+    \url{https://github.com/codereclaimers/neat-python}
 
+  \bibitem{neat_software19}
+    NEAT Software Catalog; Jun 2019;
+    \url{http://eplex.cs.ucf.edu/neat_software/}
+
+  \bibitem{pau19_smw}
+    Paul Pauls - SuperMario World NEAT Agent; Jun 2019;
+    \url{https://github.com/PaulPauls/SuperMarioWorld-NEAT-Agent}
+
+  \bibitem{tf_beta19}
+    Tensorflow 2.0 Beta; Jun 2019;
+    \url{https://www.tensorflow.org/beta}
+
+  \bibitem{tf_addons19}
+    Tensorflow addons; Jun 2019;
+    \url{https://github.com/tensorflow/addons}
+
+  \bibitem{pau19_tefne}
+    Paul Pauls - Tensorflow Neuroevolution; Jun 2019;
+    \url{https://github.com/PaulPauls/Tensorflow-Neuroevolution}
 
 \end{thebibliography}
 
